fixed stretch on phone

--- a/scoot-multi-page-website-master/_about.scss
+++ b/scoot-multi-page-website-master/_about.scss
@@ -18,6 +18,8 @@
   }
   .picture {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     max-width: 31.1rem;
     margin: 0 auto;
@@ -116,6 +118,8 @@
   }
   .picture {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     max-width: 31.1rem;
     margin: 0.8rem auto 0;
