--- a/scoot-multi-page-website-master/style.css
+++ b/scoot-multi-page-website-master/style.css
@@ -1589,6 +1589,12 @@ footer .socials .social:hover path {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   max-width: 31.1rem;
   margin: 0 auto;
@@ -1750,6 +1756,12 @@ footer .socials .social:hover path {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   max-width: 31.1rem;
   margin: 0.8rem auto 0;
